# cut-out-cookies

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml
cutout/: __init__.py  cleanup.py  constants.py  jinja_extension.py  stencil.py
examples/: cookiecutter.json
examples/hooks/: post_gen_project.py
examples/{{cookiecutter.project_name}}/: README.md  boring.py  {{'bar.py'|stencil_path('bar')}}  {{'foo.py'|stencil_path('foo')}}
examples/{{cookiecutter.project_name}}/{{'baz'|stencil_path('baz')}}/: plain.py
examples/{{cookiecutter.project_name}}/{{'garply'|stencil_path('garply')}}/: uninteresting.py
tests/: test_generate_project.py  test_stencil.py
